# jax-primitives

./: .gitignore  README.md  model.py  optimizer.py  primitives.py  pyproject.toml  pytree.py
jax_primitives/: __init__.py  base.py  layers.py  models.py  optim.py  primitives.py  utils.py
