[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_primitives"
version = "0.0.1"
authors = [{ name = "Richman Feynard" }]
requires-python = ">=3.12"
description = "Primitives to build and train models using JAX"
readme = "README.md"
license = {text = "The Unlicense"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["jax_primitives"]

[project.urls]
Homepage = "https://github.com/feynard/jax-primitives"
Issues = "https://github.com/feynard/jax-primitives/issues"
